Add OOP in Java (part I) lecture slides